# market-microstructure-simulator

./: CMakeLists.txt  LICENSE.md  README.md
src/: CandleChart.cpp  CandleChart.h  Clock.cpp  Clock.h  ContrarianStrategy.cpp  ContrarianStrategy.h  DepthChart.cpp  DepthChart.h  FundamentalStrategy.cpp  FundamentalStrategy.h  LOBPanel.cpp  LOBPanel.h  LimitOrderBook.cpp  LimitOrderBook.h  MarketMaker.cpp  MarketMaker.h  MomentumStrategy.cpp  MomentumStrategy.h  NoiseStrategy.cpp  NoiseStrategy.h  RandomStrategy.cpp  RandomStrategy.h  Trader.cpp  Trader.h  TradersStatsPanel.cpp  TradersStatsPanel.h  TrendStrategy.cpp  UIHelpers.cpp  UIHelpers.h  datatypes.h  main.cpp  priceutils.h  rng.cpp  rng.h
